--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ repo_trophies:
 
 navbar_fixed: true
 footer_fixed: true
-search_enabled: true
+search_enabled: false
 socials_in_search: true
 posts_in_search: true
 bib_search: true
@@ -207,6 +207,9 @@ exclude:
   - _includes/projects.liquid
   - _pages/repositories.md
   - _includes/repository/
+  - _pages/teaching.md
+  - _pages/profiles.md
+  - _pages/cv.md
 
 keep_files:
   - CNAME
