--- a/_config.yml
+++ b/_config.yml
@@ -209,7 +209,7 @@ exclude:
   - _includes/repository/
   - _pages/teaching.md
   - _pages/profiles.md
-  - _pages/cv.md
+  # - _pages/cv.md
 
 keep_files:
   - CNAME
@@ -644,20 +644,20 @@ third_party_libraries:
 # Get external JSON data
 # -----------------------------------------------------------------------------
 
-jekyll_get_json:
-  - data: resume
-    json: assets/json/resume.json # it can also be an url
+# jekyll_get_json:
+#   - data: resume
+#     json:  # it can also be an url
 
-jsonresume:
-  - basics
-  - work
-  - education
-  - publications
-  - projects
-  - volunteer
-  - awards
-  - certificates
-  - skills
-  - languages
-  - interests
-  - references
+# jsonresume:
+#   - basics
+#   - work
+#   - education
+#   - publications
+#   - projects
+#   - volunteer
+#   - awards
+#   - certificates
+#   - skills
+#   - languages
+#   - interests
+#   - references
